test/functions/bradc/varFns/retLitFromVarFn.good
retLitFromVarFn.chpl:6: error: can't return a literal from a var function
